fixing a few spacings and font sizes

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ button {
   box-shadow: 4px 4px 5px #888888;
 }
 .reset-btn { 
-  font-size: 1.5em; 
+  font-size: 1.25em; 
   background: rgba(233,242,252, 0.5);
 }
 .play-btn {
